# ctok

./: .gitignore  Cargo.toml  sample_corpus.txt  small_corpus.txt  test.csm  test2.csm  test3.csm  test4.csm  test_encode.csm4  test_final.csm  test_multi.txt
crates/csm-api/: Cargo.toml
crates/csm-api/src/: cli.rs  decoder.rs  encoder.rs  lib.rs  pattern_builder.rs
crates/csm-core/: Cargo.toml
crates/csm-core/src/: error.rs  fallback.rs  fst_engine.rs  lib.rs  pattern.rs  slot.rs  viterbi.rs  vocab.rs
crates/csm-discovery/: Cargo.toml
crates/csm-discovery/src/: cms.rs  fst_builder.rs  lib.rs  ngram_counter.rs  pattern_scorer.rs  ppmi.rs
crates/csm-encoding/: Cargo.toml
crates/csm-encoding/src/: bit_reader.rs  bit_writer.rs  crc.rs  file_format.rs  lib.rs
crates/csm-python/: Cargo.toml
crates/csm-python/src/: lib.rs
crates/csm-semantic/: Cargo.toml
crates/csm-semantic/src/: anomaly.rs  arrow_bridge.rs  feature_engine.rs  lib.rs  semantic_record.rs  template.rs
crates/csm-streaming/: Cargo.toml
crates/csm-streaming/src/: chunker.rs  frame.rs  kafka_sink.rs  kafka_source.rs  lib.rs
crates/csm-tokenizer/: Cargo.toml
crates/csm-tokenizer/src/: code_tokenizer.rs  lib.rs  log_tokenizer.rs  text_tokenizer.rs  token.rs
