[workspace]
members = [
    "crates/csm-core",
    "crates/csm-tokenizer",
    "crates/csm-encoding",
    "crates/csm-semantic",
    "crates/csm-streaming",
    "crates/csm-discovery",
    "crates/csm-api",
    "crates/csm-python",
]
resolver = "2"

[workspace.dependencies]
# Core
fst = "0.4"
bumpalo = "3.16"
rustc-hash = "2.0"
smallvec = "1.13"

# SIMD & Performance
simdutf = "0.4"
packed_simd_2 = "0.3"

# Parallelism
rayon = "1.10"
tokio = { version = "1.38", features = ["full"] }

# Encoding
crc32fast = "1.4"

# Output formats
arrow2 = "0.18"
parquet2 = "0.18"

# Streaming
rdkafka = "0.36"
axum = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0"

# Python bindings
pyo3 = { version = "0.21", features = ["extension-module"] }

# Discovery phase
rand = "0.8"
statrs = "0.16"

# CLI
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"